# collectAndSendEmailAdmin

./: .replit  README.md  db.sqlite3  index.html  manage.py  pyproject.toml  test.py
collectAndSendEmailAdmin/: admin.py  apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
collectAndSendEmailAdmin/migrations/: 0001_initial.py  0002_graduate_delete_position.py  0003_alter_graduate_g_cert_date_alter_graduate_g_sex.py  0004_alter_graduate_g_cert_date_alter_graduate_g_id_no_and_more.py  0005_alter_graduate_options_graduate_audit_status_and_more.py  0006_rename_g_cert_date_graduate_g_year_and_more.py  0007_alter_graduate_audit_status_and_more.py  0008_graduate_created_at.py  0009_alter_graduate_created_at.py  0010_graduate_g_email.py
collectAndSendEmailAdmin/static/css/: audit_graduate_v2.css  audit_graduate_v3.css  audit_graduate_v4.css
collectAndSendEmailAdmin/static/js/: audit_graduate_v3.js  audit_graduate_v4.js  audit_graduate_v5.js  image_preview.js
collectAndSendEmailAdmin/templates/: index.html
docs/: 业务逻辑图.md
docx/: template_1.docx
media/certificates/2024/02/02/371521202233321123/: E2Y0file-1706860897262
static/css/: audit_graduate_v4.css
templates/admin/collectAndSendEmailAdmin/graduate/: change_list.html
